--- a/src/components/navbar/dark-navbar/DarkNavbar.module.css
+++ b/src/components/navbar/dark-navbar/DarkNavbar.module.css
@@ -25,7 +25,7 @@
 }
 
 .width-section {
-  height: 95px;
+  height: 295px;
 }
 
 .navigation-link {
