--- a/src/components/navbar/light-navbar/LightNavbar.module.css
+++ b/src/components/navbar/light-navbar/LightNavbar.module.css
@@ -1,6 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Slab:ital,wght@0,100..700;1,100..700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+@font-face {
+  font-family: 'Futura PT Medium';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Futura PT Medium'), url('../../../../public/FuturaCyrillicDemi.woff') format('woff');
+}
+
 .nav-container {  
   font-family: 'Archivo Black', sans-serif;
   font-style: normal;
@@ -42,7 +49,7 @@
   height: 20px;
   margin: auto;
   color: black;
-  font-family: 'Alata', sans-serif;
+  font-family: 'Futura PT Medium', sans-serif;
   font-style: normal;
   font-weight: 400;
   text-decoration: none;
